--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
 
 
 <div class="well">
+<table><tr><td>
     <header>
       <h1>BGSNav2</h1>
     </header>
+	</td>
+	<td><img src="img/1.png" width="50px"></td>
+	</tr>
+	</table>
+	
 </div>
 <article>
 
@@ -105,9 +111,9 @@ $('ul.nav.nav-pills li a').click(function() {
 function action()
 {
 if((document.getElementById("ImageButton1").src.indexOf("1.png"))>=0)
-document.getElementById("ImageButton1").src = "file:///C:/Web_App_DAH_Test3/www/img/2.jpg";
+document.getElementById("ImageButton1").src = "img/2.jpg";
 else
-document.getElementById("ImageButton1").src = "file:///C:/Web_App_DAH_Test3/www/img/1.png";
+document.getElementById("ImageButton1").src = "img/1.png";
 }
 </script>    
 </section>
