--- a/index.html
+++ b/index.html
@@ -43,15 +43,33 @@
  
 <div id="tabs">
   <ul>
-    <li><a href="#tabs-1">Staff</a></li>
+    <li><a href="#tabs-1">Contact</a></li>
     <li><a href="#tabs-2">Diary</a></li>
     <li><a href="#tabs-3">Images</a></li>
   </ul>
   <div id="tabs-1">
-    <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+    <p>CONTACT Address:</p>
+<p></p>
+<p></p>
+<p>Bangor Grammar School</p>
+<p>84 Gransha Road</p>
+<p>Bangor</p>
+<p>Co Down </p>
+<p>BT19 7QU</p>
+<p></p>
+<p>Telephone: 028 91 473734</p>
+<p>E-mail: info@bgs.bangor.ni.sch.uk</p>
   </div>
   <div id="tabs-2">
-    <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
+    <p>6 Jan 14 - Start of Term</p>
+<p>17 Feb 14 - Half Term Holidays</p>
+<p>24 Feb 14 - Exceptional closure day (no students)</p>
+<p>11 Apr 14 - End of Term</p>
+<p>28 Apr 14 - Start of Term</p>
+<p>5 May 14  - May Day holiday</p>
+<p>13 Jun 14 - Exceptional closure day (no students)</p>
+<p>27 Jun 14 - End of Term</p>
+<p>30 Jun 14 - Exceptional closure day (no students)</p>
   </div>
   <div id="tabs-3">
     <section>
